# Beelzebub

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: client.yml  server.yml
client/: Cargo.toml
client/src/: config.rs  main.rs  win.rs
server/: Cargo.toml
server/migrations/2024-07-15-150605_create_processes_events/: down.sql  up.sql
server/src/: config.rs  main.rs  schema.rs  util.rs
shared/src/: lib.rs
