[package]
name = "beelzebub-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0"
futures = "0.3"
log = "0.4"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
simple_logger = "4.3"
tokio = { version = "1.37", features = ["macros", "rt", "rt-multi-thread"] }
wmi = "0.13"

[dependencies.windows]
version = "0.58"
features = ["Win32_Storage_FileSystem"]
