[package]
name = "beelzebub-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

directories = { workspace = true }
futures = "0.3"
log = { workspace = true }
notify = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_yaml = { workspace = true }
simple_logger = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wmi = "0.13"

[dependencies.windows]
version = "0.58"
features = ["Win32_Storage_FileSystem"]
