[package]
name = "beelzebub-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

axum = "0.7"
deadpool-diesel = { version = "0.6", features = ["postgres"] }
diesel = { version = "2.2", features = ["postgres"] }
diesel_migrations = "2.2"
directories = { workspace = true }
log = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
simple_logger = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
test-case = "*"
